<resources>
    <string name="app_name">Parqueostaller</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_reservas2">Reservas2</string>
    <string name="title_activity_conformar">Conformar</string>
    <string-array name="montos">
        <item>seleccione el monto</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string-array name="horas">
        <item>Seleccione el tiempo</item>
        <item>1/2</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="Licencia">Licencia de conducir</string>
    <string name="registro">Registro de usuarios</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo Electronico</string>
    <string name="contra">Contraseña</string>
    <string name="Registrar">Registrar usuario</string>
    <string name="placa">Placa</string>
    <string name="regis_vehiculo">Registro de vehiculos</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="ano">Año</string>
    <string name="registrar_vehiculos">Registrar vehiculo</string>
    <string name="Reportar_txt">Reportar un problema</string>
    <string name="problema">Probrema</string>

    <string name="what">Escribe aqui</string>
    <string name="enviar">Enviar</string>
    <string name="solicitar">Solicitar un nuevo estacionamiento</string>
    <string name="solicitar1">Solicitar</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
