<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registro"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:id="@+id/regis"
                android:textColor="@color/inicio_principal"
                android:layout_marginTop="20dp"

                />


            <EditText
                android:id="@+id/carnet"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:hint="@string/Licencia"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/select_edit"
                android:textColor="@color/inicio_principal"
                android:textColorHint="@color/inicio_secundario"
                android:textSize="15sp"
                android:inputType="number"
                android:drawableLeft="@drawable/licencia_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:layout_margin="8dp"

                />
            <EditText
                android:id="@+id/nombre"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:background="@drawable/select_edit"
                android:layout_gravity="center"
                android:hint="@string/nombre"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:textColorHint="@color/inicio_secundario"
                android:textColor="@color/inicio_principal"
                android:textSize="15sp"
                android:drawableLeft="@drawable/name_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />

            <EditText
                android:id="@+id/apellido"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:hint="@string/apellido"
                android:textAlignment="center"
                android:background="@drawable/select_edit"
                android:textColor="@color/inicio_principal"
                android:textColorHint="@color/inicio_secundario"
                android:layout_margin="8dp"
                android:textSize="15sp"
                android:drawableLeft="@drawable/name_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />

            <EditText
                android:id="@+id/telefono"
                android:textSize="15sp"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:hint="@string/telefono"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@drawable/select_edit"
                android:textColor="@color/inicio_principal"
                android:textColorHint="@color/inicio_secundario"
                android:layout_margin="8dp"
                android:inputType="number"
                android:drawableLeft="@drawable/telefono_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"

                />

            <EditText
                android:id="@+id/mail"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:hint="@string/correo"
                android:textAlignment="center"
                android:background="@drawable/select_edit"
                android:textColor="@color/inicio_principal"
                android:textColorHint="@color/inicio_secundario"
                android:textSize="15sp"
                android:drawableLeft="@drawable/usuario_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"

                />

            <EditText
                android:id="@+id/pass"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:hint="@string/contra"
                android:textAlignment="center"
                android:background="@drawable/select_edit"
                android:textColor="@color/inicio_principal"
                android:textColorHint="@color/inicio_secundario"
                android:layout_margin="8dp"
                android:textSize="15sp"
                android:drawableLeft="@drawable/contra_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />


            <Button
                android:id="@+id/registrar"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/Registrar"
                android:textAlignment="center"
                android:textSize="15sp"
                android:background="@drawable/inicio_botones"
                android:textColor="#FFF"
                android:layout_margin="20dp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>