<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vehiculos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/regis_vehiculo"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:id="@+id/regis"
                android:textColor="@color/inicio_principal"


                />

            <EditText
                android:id="@+id/placa"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:hint="@string/placa"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/select_edit"
                android:textColor="@color/inicio_principal"
                android:textColorHint="@color/inicio_secundario"
                android:textSize="20sp"
                android:inputType="number"
                android:drawableLeft="@drawable/placa_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />
            <EditText
                android:id="@+id/marca"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:background="@drawable/select_edit"
                android:layout_gravity="center"
                android:hint="@string/marca"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/inicio_secundario"
                android:textColor="@color/inicio_principal"
                android:textSize="20sp"
                android:drawableLeft="@drawable/marca_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />

            <EditText
                android:id="@+id/modelo"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:hint="@string/modelo"
                android:textAlignment="center"
                android:background="@drawable/select_edit"
                android:textColor="@color/inicio_principal"
                android:textColorHint="@color/inicio_secundario"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:drawableLeft="@drawable/modelo_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                />

            <EditText
                android:id="@+id/year"
                android:textSize="20sp"
                android:layout_width="300dp"
                android:layout_height="47dp"
                android:hint="@string/ano"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@drawable/select_edit"
                android:textColor="@color/inicio_principal"
                android:textColorHint="@color/inicio_secundario"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:drawableLeft="@drawable/fecha_drawable"
                android:drawablePadding="2dip"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"

                />





            <Button
                android:id="@+id/autosregistr"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/registrar_vehiculos"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/inicio_botones"
                android:textColor="#FFF"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>